--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 #   Ensure the mysql2 gem is defined in your Gemfile
 #   gem 'mysql2'
 development:
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
   host: localhost
   database: foodweb
@@ -17,7 +17,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
   host: localhost
   database: foodweb
@@ -27,7 +27,7 @@ test:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
   host: localhost
   database: foodweb
